# openclawbrain

./: .clawignore  .gitignore  AUDIT_REPORT.md  BUG_SWEEP_4.md  CHANGELOG.md  CODING_PLAN_V2.md  CONTRIBUTING.md  CRABPATH_V2_SPEC.md  LICENSE  PAPER_CODE_AUDIT.md  PLAYBOOK.md  README.md  REPRODUCE.md  REPRODUCIBILITY.md  ROADMAP.md  SKILL.md  TUNING.md  index.ts  openclaw.plugin.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  tsconfig.build.json
benchmarks/: __init__.py  queries.json  run_benchmark.py
contracts/: README.md
crabpath/: __init__.py  _io.py  _structural_utils.py  _util.py  activation.py  adapter.py  autotune.py  cli.py  connect.py  consolidation.py  decay.py  embeddings.py  feedback.py  graph.py  hasher.py  index.py  inhibition.py  inject.py  journal.py  learn.py  learning.py  lifecycle_sim.py  maintain.py  mcp_server.py  merge.py  migrate.py  mitosis.py  neurogenesis.py  openclaw.py  replay.py  router.py  score.py  simulator.py  split.py  store.py  synaptogenesis.py  traversal.py  traverse.py
docs/: FULL_REBUILD.md  MIGRATION_GUIDE.md  architecture.md  benchmarks.md  brainprofile.md  contracts-v1.md  core-thesis-ultimate-policy-gradient.md  default-experience.md  end-to-end-trace.md  evaluation-plan.md  glossary.md  guardrails-and-rollback.md  learned-routing-audit.md  learning-first-convergence.md  new-agent-sop.md  openclaw-attach-quickstart.md  openclaw-integration-troubleshooting.md  openclaw-integration.md  openclaw-workflow-proof.md  openclawbrain-openclaw-hooks.md  openclawbrain-openclaw-rearchitecture-execution-plan.md  openclawbrain-openclaw-rearchitecture-plan.md  operator-guide.md  operator-observability.md  operator-quickstart.md  ops-recipes.md  public-surface.md  release.md  reproduce-eval.md  setup-guide.md  shadow-routing-upg-architecture.md  state-directory.md  teacher-traces.md  typescript-first-convergence.md  ultimate-policy-gradient-routing-math.md  worked-example.md
examples/: __init__.py  agent_memory.py  hello_world.py  learning_loop.py  sim_edge_damping.py
experiments/: build_context_bloat_graph.py  build_gate_bloat_graph.py  build_negation_graph.py  run_all.py  run_comparison.py
openclawbrain/: __init__.py  _batch.py  cli.py  daemon.py  decay.py  feedback_events.py  full_learning.py  graph.py  index.py  inject.py  journal.py  labels.py  learn.py  local_embedder.py  maintain.py  ollama_llm.py  openai_embeddings.py  openai_llm.py  policy.py  profile.py  prompt_context.py  protocol.py  provenance.py  replay.py  route_model.py  session_sources.py  socket_client.py  socket_server.py  split.py  state_lock.py  store.py  sync.py  train_route_model.py  traverse.py
ops/: backfill_journal.py  harvest_pipeline.py  ocb_selftest.py
scenarios/: forbidden_door.jsonl
scratch/: paper.tex
scripts/: ab_scoring_sim.py  ablation_study.py  bootstrap_from_workspace.py  calibrate_defaults.py  continuous-product-loop-smoke.mjs  downstream_qa_benchmark.py  (+15 more)
(+215 files in other folders)
