[project]
name = "crabpath"
version = "5.2.0"
description = "Memory graph for AI agents that learns what to retrieve — and what to suppress."
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jonathan Gu", email = "jonathangu@gmail.com"}]
readme = "README.md"
keywords = ["ai", "agents", "memory", "graph", "retrieval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
crabpath = "crabpath.cli:main"

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
