[project]
name = "openclawbrain"
version = "12.0.0"
description = "Memory graph for AI agents that learns what to retrieve — and what to suppress."
requires-python = ">=3.10"
dependencies = []
license = {text = "Apache-2.0"}
authors = [{name = "Jonathan Gu", email = "jonathangu@gmail.com"}]
readme = "README.md"
keywords = ["ai", "agents", "memory", "graph", "retrieval", "openclawbrain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.0"]

[project.scripts]
openclawbrain = "openclawbrain.cli:main"
ocb = "openclawbrain.cli:main"
crabpath = "crabpath.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
