[project]
name = "openclawbrain"
version = "12.2.5"
description = "Memory graph for AI agents that learns what to retrieve — and what to suppress."
requires-python = ">=3.10"
dependencies = ["openai>=1.0"]
license = {text = "Apache-2.0"}
authors = [{name = "Jonathan Gu", email = "jonathangu@gmail.com"}]
readme = "README.md"
keywords = ["ai", "agents", "memory", "graph", "retrieval", "openclawbrain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
embeddings = ["sentence-transformers>=2.0"]
benchmark = ["rank_bm25>=0.2"]

[project.scripts]
openclawbrain = "openclawbrain.cli:main"
ocb = "openclawbrain.cli:main"
crabpath = "crabpath.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["openclawbrain", "crabpath"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
